tests/reference/asr-continue_compilation_2-a6145a1.stderr
syntax error: End module name does not match module name
  --> tests/errors/continue_compilation_2.f90:20:1 - 22:28
   |
20 |    module my_module
   |    ^^^^^^^^^^^^^^^^...
...
   |
22 |    end module wrong_module_name
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End subroutine name does not match subroutine name
  --> tests/errors/continue_compilation_2.f90:44:5 - 46:33
   |
44 |        subroutine my_subroutine1()
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
46 |        end subroutine different_name
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End function name does not match function name
  --> tests/errors/continue_compilation_2.f90:48:5 - 51:32
   |
48 |        function my_function() result(res)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
51 |        end function not_my_function
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End subroutine name does not match subroutine name
  --> tests/errors/continue_compilation_2.f90:53:5 - 55:33
   |
53 |        subroutine my_subroutine2()
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
55 |        end subroutine different_name 
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: Invalid syntax for variable initialization (try inserting '::' after the type)
   --> tests/errors/continue_compilation_2.f90:137:5
    |
137 |     integer init_x = 1
    |     ^^^^^^^^^^^^^^^^^^ 

syntax error: kind 16 is not supported yet.
   --> tests/errors/continue_compilation_2.f90:227:5
    |
227 |     real*16 :: unsupported_kind
    |     ^^^^^^^ 

tokenizer error: Token '?' is not recognized
   --> tests/errors/continue_compilation_2.f90:233:17
    |
233 |     integer  :: ? tokenizer_error
    |                 ^ token not recognized

tokenizer error: Token '@' is not recognized in `format` statement
   --> tests/errors/continue_compilation_2.f90:499:21
    |
499 |     100 FORMAT(A10, @)
    |                     ^ 

semantic error: Global name is already being used
  --> tests/errors/continue_compilation_2.f90:24:1 - 25:21
   |
24 |    subroutine myname
   |    ^^^^^^^^^^^^^^^^^...
...
   |
25 |    end subroutine myname
   | ...^^^^^^^^^^^^^^^^^^^^^ 'myname' defined here
   |
27 |    block data myname
   |    ^^^^^^^^^^^^^^^^^...
...
   |
29 |    
   | ...^ 'myname' defined here again

semantic error: Duplicate DIMENSION attribute specified
  --> tests/errors/continue_compilation_2.f90:35:24
   |
35 |         common /rowns/ rowns(209)
   |                        ^^^^^^^^^^ 

semantic error: Intent attribute can only be applied to procedure arguments
  --> tests/errors/continue_compilation_2.f90:58:18
   |
58 |         INTEGER, INTENT(IN) :: sub_a
   |                  ^^^^^^^^^^ 

semantic error: Dummy argument 'a' not defined
  --> tests/errors/continue_compilation_2.f90:57:5 - 59:36
   |
57 |        SUBROUTINE faulty_subroutine(a, b, c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
59 |        END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Dummy argument 'b' not defined
  --> tests/errors/continue_compilation_2.f90:57:5 - 59:36
   |
57 |        SUBROUTINE faulty_subroutine(a, b, c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
59 |        END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Dummy argument 'c' not defined
  --> tests/errors/continue_compilation_2.f90:57:5 - 59:36
   |
57 |        SUBROUTINE faulty_subroutine(a, b, c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
59 |        END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Assumed-rank variable 'x' must not have any dimensions specified.
  --> tests/errors/continue_compilation_2.f90:82:20
   |
82 |         integer :: x(.., 5)
   |                    ^^^^^^^^ 

semantic error: Dummy argument 'x' not defined
  --> tests/errors/continue_compilation_2.f90:81:5 - 83:24
   |
81 |        subroutine arank(x)
   |        ^^^^^^^^^^^^^^^^^^^...
...
   |
83 |        end subroutine arank
   | ...^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Implicit typing is not allowed, enable it by using --implicit-typing 
   --> tests/errors/continue_compilation_2.f90:132:5 - 134:49
    |
132 |        implicit real(a-z)
    |        ^^^^^^^^^^^^^^^^^^...
...
    |
134 |        ! Put declarations below without empty lines
    | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `parameter` attribute conflicts with `pointer` attribute
   --> tests/errors/continue_compilation_2.f90:135:5
    |
135 |     integer, pointer, parameter :: v => null()
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `parameter` attribute conflicts with `allocatable` attribute
   --> tests/errors/continue_compilation_2.f90:136:5
    |
136 |     integer, allocatable, parameter :: v=1
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `kind` argument of `int` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:197:54
    |
197 |     integer(8), parameter :: ar1(3) = int([1, 2, 3], [8, 8, 8])
    |                                                      ^^^^^^^^^ 

semantic error: `kind` argument of `int` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:199:54
    |
199 |     integer(8), parameter :: ar2(3) = int([1, 2, 3], [8, 8, 8])
    |                                                      ^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters
   --> tests/errors/continue_compilation_2.f90:201:13
    |
201 |     integer(4.2) :: ifoix
    |             ^^^ 

semantic error: Kind 6 is not supported for Complex
   --> tests/errors/continue_compilation_2.f90:203:13
    |
203 |     complex(6) :: iiocx
    |             ^ 

semantic error: Kind 3 is not supported for Integer
   --> tests/errors/continue_compilation_2.f90:205:13
    |
205 |     integer(3) :: iifix
    |             ^ 

semantic error: Kind 10 is not supported for Logical
   --> tests/errors/continue_compilation_2.f90:207:13
    |
207 |     logical(10) :: iiolx
    |             ^^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:209:13
    |
209 |     complex(*) :: ksoca
    |             ^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:211:13
    |
211 |     integer(*) :: ksoia
    |             ^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:213:13
    |
213 |     logical(*) :: ksola
    |             ^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters
   --> tests/errors/continue_compilation_2.f90:215:13
    |
215 |     integer('a') :: ksoix
    |             ^^^ 

semantic error: Parameter 'kvoia' is a variable, which does not reduce to a constant expression
   --> tests/errors/continue_compilation_2.f90:218:10
    |
218 |     real(kvoia) :: kvoix
    |          ^^^^^ 

semantic error: Symbol is already declared in the same scope
   --> tests/errors/continue_compilation_2.f90:220:16
    |
220 |     real(3) :: x
    |                ^ redeclaration
    |
145 |     integer, parameter :: x = 2
    |                           ~~~~~ original declaration

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:222:10
    |
222 |     real(*) kind2_a
    |          ^ 

semantic error: Parameter attribute cannot be used with Target attribute
   --> tests/errors/continue_compilation_2.f90:224:5
    |
224 |     integer, parameter, target :: foo=4
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind 16 is not supported for Real
   --> tests/errors/continue_compilation_2.f90:227:5
    |
227 |     real*16 :: unsupported_kind
    |     ^^^^^^^ 

semantic error: Argument was not specified
   --> tests/errors/continue_compilation_2.f90:229:33
    |
229 |     type(Circle) :: myCircle2 = Circle()
    |                                 ^^^^^^^^ Argument 'radius' not specified for circle

semantic error: Keyword argument not found
   --> tests/errors/continue_compilation_2.f90:231:33
    |
231 |     type(Circle) :: myCircle3 = Circle(mykeyword=10)
    |                                 ^^^^^^^^^^^^^^^^^^^^ 'mykeyword' keyword argument not found

semantic error: Incompatible ranks 2 and 1 in assignment
   --> tests/errors/continue_compilation_2.f90:234:36
    |
234 |     integer, dimension(3,2) :: m = [ 1, 0, 0, 2, 4, 6 ]
    |                                    ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Assumed-rank variable 'aRank1' must be a dummy argument.
   --> tests/errors/continue_compilation_2.f90:250:16
    |
250 |     integer :: aRank1(..)
    |                ^^^^^^^^^^ 

semantic error: Array 'a_deferred' with a deferred shape cannot be a local variable; it must be a dummy argument, allocatable, or pointer
   --> tests/errors/continue_compilation_2.f90:256:16
    |
256 |     integer :: a_deferred(:)
    |                ^^^^^^^^^^^^^ 

semantic error: More than one main program found
   --> tests/errors/continue_compilation_2.f90:127:1 - 574:11
    |
127 |    program continue_compilation_2
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
    |
574 |    end program
    | ...^^^^^^^^^^^ first main program defined here
    |
577 |    program second_program_test
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
    |
580 |    end program second_program_test
    | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ second main program defined here

semantic error: Unexpected args, SetExponent expects (real, int) as arguments
  --> tests/errors/continue_compilation_2.f90:36:18
   |
36 |         print *, set_exponent([1, 2, 3], 2)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Cannot assign to an intent(in) variable `y`
  --> tests/errors/continue_compilation_2.f90:41:9
   |
41 |         y = 99  
   |         ^ 

semantic error: Argument `val_a` with intent(in) passed to a dummy argument with modifying intent
  --> tests/errors/continue_compilation_2.f90:63:20
   |
63 |         call sub_b(val_a)
   |                    ^^^^^ 

semantic error: Argument `val_a` with intent(in) passed to a dummy argument with modifying intent
  --> tests/errors/continue_compilation_2.f90:73:26
   |
73 |         res = inner_func(val_a)
   |                          ^^^^^ 

semantic error: Deferred-length CHARACTER variable must be allocated with a character length `character(..)`
   --> tests/errors/continue_compilation_2.f90:295:14
    |
295 |     allocate(str1(i))
    |              ^^^^^^^ 

semantic error: No custom operator exists for this expression
   --> tests/errors/continue_compilation_2.f90:298:15
    |
298 |     str_t_2 = prefix // 10
    |               ^^^^^^^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:298:5
    |
298 |     str_t_2 = prefix // 10
    |     ^^^^^^^             ^^ type mismatch (string_t and integer)

semantic error: No custom operator exists for this expression
   --> tests/errors/continue_compilation_2.f90:299:15
    |
299 |     str_t_2 = prefix // str_t_1
    |               ^^^^^^^^^^^^^^^^^ 

semantic error: shape argument specified in c_f_pointer even though fptr is not an array.
   --> tests/errors/continue_compilation_2.f90:301:38
    |
301 |     call c_f_pointer(queries_1, y_1, [2])
    |                                      ^^^ 

semantic error: shape array passed to c_f_pointer must be of rank 1 but given rank is 2
   --> tests/errors/continue_compilation_2.f90:303:38
    |
303 |     call c_f_pointer(queries_2, y_2, shape)
    |                                      ^^^^^ 

semantic error: Cannot assign to a constant variable
   --> tests/errors/continue_compilation_2.f90:305:5
    |
305 |     x = 1
    |     ^^^^^ assignment here
    |
145 |     integer, parameter :: x = 2
    |                           ~~~~~ declared as constant

semantic error: More actual than formal arguments in procedure call
   --> tests/errors/continue_compilation_2.f90:308:33
    |
308 |     call myCircle%calculateArea(circleArea, 12)
    |                                 ^^^^^^^^^^^^^^ 

semantic error: Invalid argument `end` supplied
   --> tests/errors/continue_compilation_2.f90:310:5
    |
310 |     CLOSE(end=200)
    |     ^^^^^^^^^^^^^^ 

semantic error: Missing actual argument 'x' in call to 'cmplx'
   --> tests/errors/continue_compilation_2.f90:312:14
    |
312 |     print *, cmplx(y = 2) ! a = cmplx(y = 2) ! does not work with continue compilation
    |              ^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:318:11
    |
318 |     val = this_image ()
    |           ^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:319:5
    |
319 |     call co_sum (val, result_image=1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:320:9
    |
320 |     if (this_image() == 1) then
    |         ^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:324:5
    |
324 |     call event_query(1, 1, 1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Operands of comparison operator are of different types
   --> tests/errors/continue_compilation_2.f90:328:9
    |
328 |     if (i > x_2) then
    |         ^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
   --> tests/errors/continue_compilation_2.f90:332:14
    |
332 |     size_a = size(a_2, 1, dim=1)
    |              ^^^^^^^^^^^^^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
   --> tests/errors/continue_compilation_2.f90:333:14
    |
333 |     size_a = size(a_2, dim = 1, 1)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
   --> tests/errors/continue_compilation_2.f90:335:31
    |
335 |     size_a_2 = size(a_3, kind=kindvar, dim=1)
    |                               ^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
   --> tests/errors/continue_compilation_2.f90:336:31
    |
336 |     size_a_2 = size(a_3, kind=kindvar)
    |                               ^^^^^^^ 

semantic error: Atomic operations are not supported yet
   --> tests/errors/continue_compilation_2.f90:338:5
    |
338 |     call atomic_add (atom[1], this_image())
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Atomic operations are not supported yet
   --> tests/errors/continue_compilation_2.f90:339:5
    |
339 |     call atomic_add (atom[2], this_image())
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type-spec cannot contain an asterisk for a type parameter
   --> tests/errors/continue_compilation_2.f90:341:14
    |
341 |     print *, [character(*) :: "a", "b", "ball", "cat"]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Different `character` lengths 1 and 4 in array constructor
   --> tests/errors/continue_compilation_2.f90:343:25
    |
343 |     print *, ["a", "b", "ball", "cat"]
    |                         ^^^^^^ 

semantic error: Different `character` lengths 2 and 5 in array constructor
   --> tests/errors/continue_compilation_2.f90:344:27
    |
344 |     print *, ["a1", "b1", "ball1", "cat1"]
    |                           ^^^^^^^ 

semantic error: Element in `real(8)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:347:20
    |
347 |     print *, [x_3, [1., 2.]]
    |                    ^^^^^^^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:349:18
    |
349 |     print *, [1, 2.]
    |                  ^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:351:18
    |
351 |     print *, [1, [1., 2.]]
    |                  ^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
   --> tests/errors/continue_compilation_2.f90:353:14
    |
353 |     print *, dfloat(y_3)
    |              ^^^^^^^^^^^ 

semantic error: Invalid argument type for `dim` or `mask`
   --> tests/errors/continue_compilation_2.f90:355:29
    |
355 |     print *, sum([1, 2, 3], 1.1)
    |                             ^^^ 

semantic error: `mask` argument to `Sum` must be a scalar or array of logical type
   --> tests/errors/continue_compilation_2.f90:357:32
    |
357 |     print *, sum([1, 2, 3], 1, 1.1)
    |                                ^^^ 

semantic error: `dim` argument to `Sum` must be a scalar and of integer type
   --> tests/errors/continue_compilation_2.f90:359:37
    |
359 |     print *, sum([1, 2, 3], .true., 1.1)
    |                                     ^^^ 

semantic error: Too many arguments to call `dint`
   --> tests/errors/continue_compilation_2.f90:361:13
    |
361 |     print*, dint(1.0_8, 8)
    |             ^^^^^^^^^^^^^^ 

semantic error: Too many arguments to call `dint`
   --> tests/errors/continue_compilation_2.f90:362:13
    |
362 |     if (abs(dint(1.0_8, 8) - 1.0_8) > 10e-5 ) error stop
    |             ^^^^^^^^^^^^^^ 

semantic error: Argument 1 of dlgama must be of double precision real type
   --> tests/errors/continue_compilation_2.f90:364:14
    |
364 |     print *, dlgama(2.7)
    |              ^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
   --> tests/errors/continue_compilation_2.f90:366:13
    |
366 |     print*, dnint(1.0_8, 8)
    |             ^^^^^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
   --> tests/errors/continue_compilation_2.f90:367:13
    |
367 |     if (abs(dnint(1.0_8, 8) - 1.0_8) > 10e-5 ) error stop
    |             ^^^^^^^^^^^^^^^ 

semantic error: Do concurrent loop variable `j` cannot be part of local expression
   --> tests/errors/continue_compilation_2.f90:369:30
    |
369 |     do concurrent (j = 1:Ny) local(i_1, j)
    |                              ^^^^^^^^^^^^^ 

semantic error: Assignment to loop variable `i_2` is not allowed
   --> tests/errors/continue_compilation_2.f90:376:9
    |
376 |         i_2 = j_1 + 1
    |         ^^^ 

semantic error: Step expression (Increment) in DO loop cannot be zero
   --> tests/errors/continue_compilation_2.f90:382:20
    |
382 |     do i_2 = 1, 5, 0
    |                    ^ 

semantic error: first argument of `dprod` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:386:13
    |
386 |     print*, dprod(4.23_8, 4.3_8)
    |             ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Dreal expects (complex64) as arguments
   --> tests/errors/continue_compilation_2.f90:389:14
    |
389 |     print *, dreal(a_4)
    |              ^^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'complex' intrinsic. It accepts exactly 2 arguments.
   --> tests/errors/continue_compilation_2.f90:391:11
    |
391 |     a_5 = complex(1)
    |           ^^^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
   --> tests/errors/continue_compilation_2.f90:393:14
    |
393 |     print *, float(y_4)
    |              ^^^^^^^^^^ 

semantic error: Invalid argument `start` supplied
   --> tests/errors/continue_compilation_2.f90:395:5
    |
395 |     FLUSH(unit=10, start=100)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type mismatch in argument at argument (1); passed `real(4)` to `integer(4)`.
   --> tests/errors/continue_compilation_2.f90:397:16
    |
397 |     print *, f(42.9)
    |                ^^^^ 

semantic error: Argument 1 to Ichar must have length 1
   --> tests/errors/continue_compilation_2.f90:399:13
    |
399 |     print*, ichar("okay")
    |             ^^^^^^^^^^^^^ 

semantic error: first argument of `idint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:401:14
    |
401 |     print *, idint(4.5)
    |              ^^^^^^^^^^ 

semantic error: first argument of `ifix` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:403:14
    |
403 |     print *, ifix(4.23_8)
    |              ^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 1(1 and 3)
   --> tests/errors/continue_compilation_2.f90:406:5
    |
406 |     arr1 = [1, 2, 3]
    |     ^^^^^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 3(1 and 2)
   --> tests/errors/continue_compilation_2.f90:410:5
    |
410 |     idaa2_y = idaa2_x
    |     ^^^^^^^^^^^^^^^^^ 

semantic error: Shapes for operands are not conformable
   --> tests/errors/continue_compilation_2.f90:412:14
    |
412 |     print *, idlalb1_x .neqv. [.true., .true.]
    |              ^^^^^^^^^        ^^^^^^^^^^^^^^^^ 

semantic error: Shapes for operands are not conformable
   --> tests/errors/continue_compilation_2.f90:414:14
    |
414 |     print *, idlalb2_x1 .neqv. idlalb2_x2
    |              ^^^^^^^^^^        ^^^^^^^^^^ 

semantic error: Incompatible ranks 2 and 1 in assignment
   --> tests/errors/continue_compilation_2.f90:416:5
    |
416 |     iraa1_arr1 = [1, 2, 3]
    |     ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Incompatible ranks 1 and 3 in assignment
   --> tests/errors/continue_compilation_2.f90:418:5
    |
418 |     iraa2_arr3 = iraa2_arr1
    |     ^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: the first array argument to `where` must be of type logical
   --> tests/errors/continue_compilation_2.f90:420:11
    |
420 |     where([1, 2, 3, 4, 5]) iatw1_b = 1
    |           ^^^^^^^^^^^^^^^ 

semantic error: the first array argument to `where` must be of type logical
   --> tests/errors/continue_compilation_2.f90:425:11
    |
425 |     where(iatw2_i1) iatw2_b = 1
    |           ^^^^^^^^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:429:11
    |
429 |     where(.true.) itw1_b = 12121
    |           ^^^^^^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:432:11
    |
432 |     where(1) itw2_b = 12121
    |           ^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:435:11
    |
435 |     where(max(1.33, 2.67)) itw3_b = 12121
    |           ^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Radix expects (int) or (real) as arguments
   --> tests/errors/continue_compilation_2.f90:441:14
    |
441 |     print *, radix((2.4, 1.0))
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: datan2 was declared as a variable, it can't be called as a function
   --> tests/errors/continue_compilation_2.f90:445:14
    |
445 |     print *, datan2(x,y)
    |              ^^^^^^^^^^^ help: use the compiler option "--implicit-interface" to use intrinsic functions

semantic error: datan2 was declared as a variable, it can't be called as a function
   --> tests/errors/continue_compilation_2.f90:446:12
    |
446 |     if(abs(datan2(x,y) - 0.59941916594660438) > 1d-6) error stop
    |            ^^^^^^^^^^^ help: use the compiler option "--implicit-interface" to use intrinsic functions

semantic error: `pos` argument of `ibclr` intrinsic must be non-negative
   --> tests/errors/continue_compilation_2.f90:448:14
    |
448 |     print *, ibclr(1, -2)
    |              ^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Dshiftl must be the same
   --> tests/errors/continue_compilation_2.f90:450:14
    |
450 |     print *, dshiftl(1, 1_8, 1)
    |              ^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Ior must be the same
   --> tests/errors/continue_compilation_2.f90:452:14
    |
452 |     print *, ior(1, 1_8)
    |              ^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Ieor must be the same
   --> tests/errors/continue_compilation_2.f90:454:14
    |
454 |     print *, ieor(1, 1_8)
    |              ^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Hypot must be the same
   --> tests/errors/continue_compilation_2.f90:456:14
    |
456 |     print *, hypot(1.0, 2.7_8)
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Ior must be the same
   --> tests/errors/continue_compilation_2.f90:458:14
    |
458 |     print *, ior(intr8_x, intr8_y)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Iand must be the same
   --> tests/errors/continue_compilation_2.f90:460:14
    |
460 |     print *, iand(intr9_x, intr9_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Ieor must be the same
   --> tests/errors/continue_compilation_2.f90:462:14
    |
462 |     print *, ieor(intr10_x, intr10_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Hypot must be the same
   --> tests/errors/continue_compilation_2.f90:466:14
    |
466 |     print *, hypot(intr11_x, intr11_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: All arguments to max0 must be of the same type
   --> tests/errors/continue_compilation_2.f90:468:14
    |
468 |     print *, max(12, 13.94)
    |              ^^^^^^^^^^^^^^ 

semantic error: All arguments to min0 must be of the same type
   --> tests/errors/continue_compilation_2.f90:470:14
    |
470 |     print *, min(12, 13.94)
    |              ^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Scale expects (real, int) as arguments
   --> tests/errors/continue_compilation_2.f90:472:14
    |
472 |     print *, scale([1, 2, 3], 2)
    |              ^^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, SetExponent expects (real, int) as arguments
   --> tests/errors/continue_compilation_2.f90:474:14
    |
474 |     print *, set_exponent([1, 2, 3], 2)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Non-variable expression for `iostat`
   --> tests/errors/continue_compilation_2.f90:477:5
    |
477 |     read(ici_buffer, *, iostat=ici_ios)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `iostat` must be scalar
   --> tests/errors/continue_compilation_2.f90:480:5
    |
480 |     read(insv_buffer, *, iostat=insv_ios(1:1))
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: The SHIFT argument must be less than or equal to the of SIZE argument
   --> tests/errors/continue_compilation_2.f90:482:14
    |
482 |     print *, ishftc(10, 6, 4)
    |              ^^^^^^^^^^^^^^^^ 

semantic error: The first argument of `cmplx` intrinsic is of complex type, the second argument in this case must be absent
   --> tests/errors/continue_compilation_2.f90:484:14
    |
484 |     print *, cmplx(complex_z , 1)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: `kind` argument of `aint` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:486:36
    |
486 |     print *, aint([1.0, 2.0, 3.0], [4, 4])
    |                                    ^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:488:5
    |
488 |     tm1_x = "x"
    |     ^^^^^   ^^^ type mismatch (integer and string)

semantic error: Type mismatch in binary operator, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:490:13
    |
490 |     tm2_x = 5 + "x"
    |             ^   ^^^ type mismatch (integer and string)

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:490:5
    |
490 |     tm2_x = 5 + "x"
    |     ^^^^^       ^^^ type mismatch (integer and string)

semantic error: Variable 'foo' is not declared
   --> tests/errors/continue_compilation_2.f90:492:13
    |
492 |     print *,foo
    |             ^^^ 'foo' is undeclared

semantic error: Variable 'mycircle' doesn't have any member named, 'mymember'.
   --> tests/errors/continue_compilation_2.f90:497:14
    |
497 |     print *, myCircle%mymember
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: Unequal character lengths in MERGE intrinsic
   --> tests/errors/continue_compilation_2.f90:501:13
    |
501 |     print*, merge("okay", "ok", .true.)
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: first argument of `idint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:503:14
    |
503 |     print *, idint(4.23)
    |              ^^^^^^^^^^^ 

semantic error: first argument of `idint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:504:14
    |
504 |     print *, idint(idint_kind_mismatch)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Argument 1 to Ichar must have length 1
   --> tests/errors/continue_compilation_2.f90:506:14
    |
506 |     print *, ichar(ichar_runtime)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: first argument of `dprod` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:508:14
    |
508 |     print *, dprod(dprod_1, dprod_2)
    |              ^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: second argument of `dprod` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:509:14
    |
509 |     print *, dprod(dprod_3, dprod_2)
    |              ^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: first argument of `idnint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:511:14
    |
511 |     print *, idnint(3.5)
    |              ^^^^^^^^^^^ 

semantic error: first argument of `idnint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:512:14
    |
512 |     print *, idnint(idnint_runtime)
    |              ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: first argument of `ifix` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:514:14
    |
514 |     print *, ifix(4.23_8)
    |              ^^^^^^^^^^^^ 

semantic error: first argument of `ifix` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:515:14
    |
515 |     print *, ifix(ifix_runtime)
    |              ^^^^^^^^^^^^^^^^^^ 

semantic error: Arguments to min0 must be of real, integer or character type
   --> tests/errors/continue_compilation_2.f90:517:14
    |
517 |     print *, min(.true., .false.)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Arguments to min0 must be of real, integer or character type
   --> tests/errors/continue_compilation_2.f90:518:14
    |
518 |     print *, min(min_max, min_max)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Arguments to min0 must be of real, integer or character type
   --> tests/errors/continue_compilation_2.f90:520:14
    |
520 |     print *, max(.true., .false.)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Arguments to min0 must be of real, integer or character type
   --> tests/errors/continue_compilation_2.f90:521:14
    |
521 |     print *, max(min_max, min_max)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Argument of 'size' must be an array
   --> tests/errors/continue_compilation_2.f90:526:19
    |
526 |     print *, size(ichar_runtime)
    |                   ^^^^^^^^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:527:5
    |
527 |     lhs = rhs
    |     ^^^   ^^^ type mismatch (string and string[:])

semantic error: Missing actual argument 'string' in call to 'index'
   --> tests/errors/continue_compilation_2.f90:528:14
    |
528 |     print *, index( substring = 'de', back = .true. )
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Function 'compiler_options' not found (not user defined nor intrinsic)
   --> tests/errors/continue_compilation_2.f90:529:14
    |
529 |     print *, compiler_options()
    |              ^^^^^^^^^^^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:530:11
    |
530 |     print "(AF9.6)", 'pi =', 4*atan(1.0)
    |           ^^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:531:14
    |
531 |     write (*,"(ai0)", iostat=ierr) "hi", 3
    |              ^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:533:14
    |
533 |     write (*,badfmt_p) "hi", 3
    |              ^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:534:14
    |
534 |     write (*,badfmt_s) "hi", 3
    |              ^^^^^^^^ 

semantic error: Function 'add_parens' not found (not user defined nor intrinsic)
   --> tests/errors/continue_compilation_2.f90:535:15
    |
535 |     write (*, add_parens (badfmt_s)) "hi", 3
    |               ^^^^^^^^^^^^^^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:537:11
    |
537 |     print "(aai6)", a,"hi",15
    |           ^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:537:11
    |
537 |     print "(aai6)", a,"hi",15
    |           ^^^^^^^^ 

warning: `sleep` is a non-standard extension
   --> tests/errors/continue_compilation_2.f90:538:5
    |
538 |     call sleep(1)
    |     ^^^^^^^^^^^^^ not part of the Fortran standard
